# reso_client

./: .env-example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  USAGE.md  example.env  llms.txt
.github/workflows/: ci.yml
examples/: analyze_active_listings.rs  analyze_property_fields.rs  property_test.rs  test_actris_ref.rs  test_apply.rs  test_connectivity.rs  test_core_queries.rs  test_count_only.rs  test_expand.rs  test_filters.rs  test_member.rs  test_metadata.rs  test_pagination_nextlink.rs  test_property.rs  test_replication.rs  test_select.rs
src/: Cargo.toml  analyze_metadata.rs  client.rs  error.rs  lib.rs  main.rs  metadata_parser.rs  queries.rs  replication.rs  reso_client.rs
tests/: client_http_tests.rs  queries_tests.rs
