# Cargo.toml

[package]
name = "reso-client"
version = "0.1.0"
edition = "2021"
authors = ["Jeremey Bingham <jeremeybingham@gh-email.com>"]  # TODO: Update
description = "Rust client library for RESO Web API (OData 4.0) servers"
license = "MIT"
repository = "https://github.com/jeremeybingham/reso_client"
keywords = ["reso", "odata", "real-estate", "mls"]
categories = ["api-bindings", "web-programming::http-client"]

[lib]
name = "reso_client"
path = "src/lib.rs"

[dependencies]
# HTTP Client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error Handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"

# URL handling
urlencoding = "2"

[dev-dependencies]
tokio-test = "0.4"
